change social links

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         <section id="follow">
             <h2>follow</h2>
             <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Verivery" id="tribute-link" target="_blank"><i class="fas fa-globe"></i></a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Verivery/" id="tribute-link" target="_blank"><i class="fas fa-globe"></i></a></li>
 
                 <li><a href="https://www.instagram.com/the_verivery/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 
-                <li><a href="https://twitter.com/the_verivery" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://twitter.com/the_verivery/" target="_blank"><i class="fab fa-twitter"></i></a></li>
 
-                <li><a href="https://web.facebook.com/theverivery" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://web.facebook.com/theverivery/" target="_blank"><i class="fab fa-facebook"></i></a></li>
 
-                <li><a href="https://www.youtube.com/c/twice" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="https://www.youtube.com/c/verivery" target="_blank"><i class="fab fa-youtube"></i></a></li>
             </ul>
         </section>
 
