add freeCodeCamp cdn

--- a/index.html
+++ b/index.html
@@ -89,5 +89,6 @@
     </main>
 
     <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
